--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,15 @@ category.cover.image.path=images/categories/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+#logging.level.com.ankitacodes.Ecom.controller=DEBUG
+#
+## Logging pattern for the console
+#logging.pattern.console= %date{ISO8601} %-5level %class{0}:%L - [%X] %msg%n
+#
+##logging pattern for file
+#logging.pattern.file=%date{ISO8601} %-5level %class{0}:%L - [%X] %msg%n
+#
+## output file
+#logging.file.name=application.log
+
 spring.profiles.active=dev
