added spring profiles as: dev, qa, prod and created databases for each environment.

--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ecomstore
+server.port=9292
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecomstoreqa
 spring.datasource.username=root
 spring.datasource.password=root
+
 spring.jpa.show.sql=true
