--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
-server.port=9090
+#datasource properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #jpa configurations
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-#path config
+#image path config
 user.profile.image.path=images/users/
 category.cover.image.path=images/categories/
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+#Spring active profile setting property
+spring.profiles.active=prod
 
 #logging.level.com.ankitacodes.Ecom.controller=DEBUG
 #
@@ -23,4 +26,3 @@ spring.servlet.multipart.max-request-size=10MB
 ## output file
 #logging.file.name=application.log
 
-spring.profiles.active=dev
