--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
+server.port=9090
 spring.datasource.url=jdbc:mysql://localhost:3306/ecomstore
 spring.datasource.username=root
 spring.datasource.password=root
+
 spring.jpa.show.sql=true
