--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ecomstore
+server.port=9191
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ecomstoreprod
 spring.datasource.username=root
 spring.datasource.password=root
+
 spring.jpa.show.sql=true
