--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -5,3 +5,29 @@ spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.show.sql=true
+
+
+#datasource properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#jpa configurations
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+#image path config
+user.profile.image.path=images/users/
+category.cover.image.path=images/categories/
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#logging.level.com.ankitacodes.Ecom.controller=DEBUG
+#
+## Logging pattern for the console
+#logging.pattern.console= %date{ISO8601} %-5level %class{0}:%L - [%X] %msg%n
+#
+##logging pattern for file
+#logging.pattern.file=%date{ISO8601} %-5level %class{0}:%L - [%X] %msg%n
+#
+## output file
+#logging.file.name=application.log
